about me section update, tag overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ $primary-invert: $pink-invert;
 // 4. Import the rest of Bulma
 */
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
-@import url(../node_modules/aos/dist/aos.css);
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -7374,9 +7373,6 @@ html {
 #skills, #projects {
   background-color: whitesmoke; }
 
-#logo {
-  padding-right: 5px; }
-
 .footer {
   background-color: #00d1b2 !important;
   color: white !important; }
@@ -7428,11 +7424,5 @@ html {
 ::-webkit-scrollbar-track {
   background: #fff; }
 
-.no-decor:hover {
-  text-decoration: none; }
-
 .also {
   margin: 3% 0 !important; }
-
-#logo {
-  height: 50px; }
